--- a/notes/05_infomax/tutorial.tex
+++ b/notes/05_infomax/tutorial.tex
@@ -6,7 +6,7 @@
 }
 %\setcounter{section}{\sheetnum-3}
 \newcommand{\tutorialtitle}{%
-    Independent Component Analysis (Infomax)
+    Independent Component Analysis - The Infomax Method
 }
 \newcommand{\tutorialtitleshort}{%
 	Infomax ICA
@@ -92,8 +92,7 @@
 \input{./4_gradient}
 \mode*
 
-\clearpage
-
+%\clearpage
 
 %\section{References}
 %\begin{frame}[allowframebreaks] \frametitle{References}
