--- a/notes/05_infomax/bibliography.bib
+++ b/notes/05_infomax/bibliography.bib
@@ -1,29 +1,16 @@
-@book{sutton1998introduction,
-  title={Introduction to reinforcement learning},
-  author={Sutton, Richard S and Barto, Andrew G and others},
-  volume={135},
-  year={1998},
-  publisher={MIT press Cambridge}
+@article{bell1995information,
+  title={An information-maximization approach to blind separation and blind deconvolution},
+  author={Bell, Anthony J and Sejnowski, Terrence J},
+  journal={Neural computation},
+  volume={7},
+  number={6},
+  pages={1129--1159},
+  year={1995},
+  publisher={MIT Press}
 }
-@Book{Bertsekas07,
-  author = 	 {D. P. Bertsekas},
-  title = 	 {Dynamic Programming and Optimal Control},
-  publisher ={Athena Scientific},
-  year = 	 {2007},
-  volume = 	 {2},
-  edition =  {3rd},
-  url = {http://www.control.ece.ntua.gr/UndergraduateCourses/ProxTexnSAE/Bertsekas.pdf}
-}
-@Article{Watkins92,
-  author = 	 {C. Watkins and P. Dayan},
-  title = 	 {Q-learning},
-  journal = 	 {Machine Learning},
-  year = 	 {1992},
-  OPTkey = 	 {},
-  volume = 	 {8},
-  OPTnumber = 	 {},
-  pages = 	 {279--292},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+@book{haykin1994neural,
+  title={Neural networks: a comprehensive foundation},
+  author={Haykin, Simon},
+  year={1994},
+  publisher={Prentice Hall PTR}
 }
